force-app/main/default/objects/Product2/fields/ATAK_Code__c.field-meta.xml
<CustomField>
    <fullName>ATAK_Code__c</fullName>
    <externalId>true</externalId>
    <label>ATAK Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>