force-app/main/default/objects/Product2/fields/Date_Out_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Date_Out_of_Service__c</fullName>
    <label>Date Out of Service</label>
    <type>Date</type>
</CustomField>