force-app/main/default/objects/Product2/fields/Date_Use_End__c.field-meta.xml
<CustomField>
    <fullName>Date_Use_End__c</fullName>
    <label>Date Use End</label>
    <type>Date</type>
</CustomField>