force-app/main/default/objects/Product2/fields/Department_Code__c.field-meta.xml
<CustomField>
    <fullName>Department_Code__c</fullName>
    <label>Department Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>