force-app/main/default/objects/Product2/fields/Department_Name__c.field-meta.xml
<CustomField>
    <fullName>Department_Name__c</fullName>
    <label>Department Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>