force-app/main/default/objects/Product2/fields/Depot_Code__c.field-meta.xml
<CustomField>
    <fullName>Depot_Code__c</fullName>
    <label>Depot Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>