force-app/main/default/objects/Product2/fields/Depot_Name__c.field-meta.xml
<CustomField>
    <fullName>Depot_Name__c</fullName>
    <label>Depot Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>