force-app/main/default/objects/Product2/fields/Driver_Code__c.field-meta.xml
<CustomField>
    <fullName>Driver_Code__c</fullName>
    <label>Driver Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>