force-app/main/default/objects/Product2/fields/Group_Code__c.field-meta.xml
<CustomField>
    <fullName>Group_Code__c</fullName>
    <label>Group Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>