force-app/main/default/objects/Product2/fields/Group_Description__c.field-meta.xml
<CustomField>
    <fullName>Group_Description__c</fullName>
    <label>Group Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PERSONENWAGEN DIESEL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>