force-app/main/default/objects/Product2/fields/Means_Category__c.field-meta.xml
<CustomField>
    <fullName>Means_Category__c</fullName>
    <label>Means Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>