force-app/main/default/objects/Product2/fields/Means_Code__c.field-meta.xml
<CustomField>
    <fullName>Means_Code__c</fullName>
    <label>Means Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>