force-app/main/default/objects/Product2/fields/Means_Description__c.field-meta.xml
<CustomField>
    <fullName>Means_Description__c</fullName>
    <label>Means Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>