force-app/main/default/objects/Product2/fields/Product_Name_FR__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_FR__c</fullName>
    <label>Product Name FR</label>
    <type>TextArea</type>
</CustomField>