force-app/main/default/objects/Product2/fields/Product_Name_NL__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_NL__c</fullName>
    <label>Product Name NL</label>
    <type>TextArea</type>
</CustomField>