force-app/main/default/objects/Product2/fields/Service_Package_Product__c.field-meta.xml
<CustomField>
    <fullName>Service_Package_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Package Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>