force-app/main/default/objects/Product2/recordTypes/Extra_Work.recordType-meta.xml
<RecordType>
    <fullName>Extra_Work</fullName>
    <active>true</active>
    <label>Extra Work</label>
</RecordType>