force-app/main/default/objects/Product2/recordTypes/Material.recordType-meta.xml
<RecordType>
    <fullName>Material</fullName>
    <active>true</active>
    <label>Material</label>
</RecordType>