force-app/main/default/objects/Product2/recordTypes/Service_Package.recordType-meta.xml
<RecordType>
    <fullName>Service_Package</fullName>
    <active>true</active>
    <label>Service Package</label>
</RecordType>